--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^4.1.0",
     "core-js": "^3.4.4",
+    "netlify-identity-widget": "^1.6.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
